--- a/Phocation/Base.lproj/Main.storyboard
+++ b/Phocation/Base.lproj/Main.storyboard
@@ -158,7 +158,7 @@
                                 <rect key="frame" x="492" y="543" width="80" height="30"/>
                                 <color key="backgroundColor" red="0.40000000600000002" green="1" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <state key="normal" title="Filter">
+                                <state key="normal" title="Mine">
                                     <color key="titleColor" red="1" green="0.50196078430000002" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
@@ -538,6 +538,6 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="mFO-yI-yUS"/>
-        <segue reference="Z05-PE-Ip4"/>
+        <segue reference="3Dj-SU-Voo"/>
     </inferredMetricsTieBreakers>
 </document>
